# binance-bot

./: .env.example  .gitignore  init_database.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
core/: engine.py  enums.py  models.py  risk.py  rules.py  selector.py  state_machine.py
execution/: executor.py  sl_tp.py
market/: analyzer.py  fetcher.py  indicators.py  snapshot.py
notifications/: base.py  formatter.py  telegram.py
persistence/: db.py  repository.py  schema.sql  supabase_db.py  supabase_repository.py
utils/: logger.py
wallet/: interface.py  paper_wallet.py
