[project]
name = "trading-bot"
version = "0.1.0"
description = "Rule-based Binance spot trading bot"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "binance-connector>=3.5.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "pendulum>=3.0.0"
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
select = ["E", "F", "B"]
